react basic end

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://iamsoomini.github.io/react-nomad1"
+  "homepage": "https://iamsoomini.github.io/react-nomad1/"
 }
